--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
+		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
 		<link rel="stylesheet" href="./assets/style.css" />
 	</head>
 	<body>
@@ -39,9 +41,18 @@
 					</div>
 				</div>
 				<!-- Content -->
-				<div aria-colindex="1" aria-label="content" class="mt-0 pt-10" id="beranda">
+				<div aria-colindex="1" aria-label="content" class="mt-0 md:pt-5" id="beranda">
 					<div class="bg-base-100 w-full">
-						<div class="container-content h-screen mt-0 flex md:px-20 justify-between flex-wrap lg:flex-row items-center font-bold"></div>
+						<div class="container-content relative gap-0 gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-start font-bold">
+							<div class="lg:w-2/3 z-20 flex flex-col gap-16 bg-primary1 w-full lg:aspect-[225/179] pt-10">
+								<div data-splitting="words" class="lg:text-6xl text-4xl font-medium lg:text-left text-shadow"><span class="font-bold text-red-500 dark:text-red-400">Lorem</span> ipsum dolor sit amet <span class="font-bold text-amber-500 dark:text-amber-400">consectetur</span> adipisicing <span class="font-bold text-blue-500 dark:text-blue-400">elit</span>.</div>
+                                <div data-aos="zoom-in-up" data-aos-delay="800" class="w-fit"><a href="#" class="btn w-fit btn-lg dark:bg-teal-400 bg-teal-600 hover:bg-opacity-90 rounded px-10 text-base-300">Lorem</a></div>
+							</div>
+							<div class="lg:w-1/4 z-20 relative bg-accent1 grow w-full lg:aspect-[4/7] aspect-video">
+								<div data-aos="fade-up" data-aos-delay="300" class="z-10 lg:hidden grow w-full aspect-[225/179] bg-[url(/assets/images/hero.svg)] dark:bg-[url(/assets/images/hero-dark.svg)] bg-no-repeat bg-top bg-contain"></div>
+							</div>
+							<div data-aos="fade-up" data-aos-delay="300" class="w-[calc(66.666%_-_40px)] z-10 absolute right-[40px] bottom-[10%] lg:bottom-0 grow aspect-[225/179] bg-[url(/assets/images/hero.svg)] dark:bg-[url(/assets/images/hero-dark.svg)] bg-no-repeat bg-top bg-contain max-lg:hidden"></div>
+						</div>
 					</div>
 				</div>
 				<footer class="footer transition-all bg-neutral-900 dark:bg-neutral-300 text-base-100">
@@ -73,6 +84,7 @@
 			</div>
 		</div>
 		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+		<script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
 		<script src="./assets/script.js"></script>
 	</body>
