--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
 		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
+		<link rel="stylesheet" href="./assets/marquee.css" />
 		<link rel="stylesheet" href="./assets/style.css" />
 	</head>
 	<body>
@@ -31,8 +32,9 @@
 						<div class="flex-nones navbar-end items-center flex gap-2">
 							<a aria-label="nav-link" href="#beranda" class="nav-links max-lg:hidden"><span class="text-2xl icon-[ic--round-home] lg:hidden"></span>Beranda</a>
 							<a aria-label="nav-link" href="#section2" class="nav-links max-lg:hidden"><span class="text-2xl icon-[iconoir--book-solid] lg:hidden"></span>section2</a>
-							<a aria-label="nav-link" href="#tentang-saya" class="nav-links max-lg:hidden"><span class="text-2xl icon-[ic--person] lg:hidden"></span>Tentang saya</a>
-							<a aria-label="nav-link" href="#paket" class="nav-links max-lg:hidden"><span class="text-2xl icon-[fluent--box-24-filled] lg:hidden"></span>Paket</a>
+							<a aria-label="nav-link" href="#section3" class="nav-links max-lg:hidden"><span class="text-2xl icon-[ic--person] lg:hidden"></span>section3</a>
+							<a aria-label="nav-link" href="#section4" class="nav-links max-lg:hidden"><span class="text-2xl icon-[ic--person] lg:hidden"></span>section4</a>
+							<a aria-label="nav-link" href="#section5" class="nav-links max-lg:hidden"><span class="text-2xl icon-[ic--person] lg:hidden"></span>section5</a>
 							<label for="sidebar-nav" aria-label="open sidebar" class="btn btn-circle btn-ghost lg:hidden">
 								<span class="icon-[heroicons-solid--menu-alt-3] text-2xl"></span>
 							</label>
@@ -64,16 +66,19 @@
 							</div>
 							<div data-aos="fade-up" data-aos-anchor="#beranda" data-aos-delay="300" class="w-[calc(66.666%_-_40px)] z-10 absolute right-[-40px] bottom-0 grow aspect-[225/179] bg-[url(/assets/images/hero.svg)] dark:bg-[url(/assets/images/hero-dark.svg)] bg-no-repeat bg-top bg-contain max-lg:hidden"></div>
 						</div>
+						<div class="marquee-container p-10 container-content">
+							<div class="bg-[url(https://fakeimg.pl/600x400)] opacity-60 rounded aspect-video w-60 bg-center bg-cover"></div>
+						</div>
 					</div>
 				</div>
 				<div aria-colindex="2" aria-label="content" class="mt-0" id="section2">
 					<div class="bg-base-200 w-full overflow-hidden">
-						<div class="container-content px-5 py-20 pb-10 gap-0 gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-start font-bold">
+						<div class="container-content px-5 py-20 pb-10 gap-0 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-start font-bold">
 							<div class="section-title flex flex-col w-full">
-								<div class="sm:text-5xl text-2xl w-full text-left">Lorem, ipsum.</div>
+								<div class="sm:text-5xl text-2xl w-full text-left">Section 2</div>
 								<div class="divider my-0 py-0 divider-primary w-32"></div>
 							</div>
-							<div class="flex md:flex-row flex-col w-full gap-x-10 gap-y-2 flex-wrap justify-center text-base font-normal">
+							<div class="max-sm:pt-5 flex md:flex-row flex-col w-full gap-x-10 gap-y-2 flex-wrap justify-center text-base font-normal">
 								<div class="md:w-1/4 grow text-left max-md:text-xl text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, blanditiis?</div>
 								<div class="w-1/4 max-md:hidden grow text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, blanditiis?</div>
 								<div class="md:w-1/4 grow flex justify-end items-start">
@@ -83,6 +88,7 @@
 									</a>
 								</div>
 							</div>
+							<!-- Cards -->
 							<div class="flex w-full gap-5 flex-wrap justify-center text-base font-normal">
 								<div class="card-2 w-1/4">
 									<div class="card-body">
@@ -142,6 +148,132 @@
 						</div>
 					</div>
 				</div>
+				<div aria-colindex="3" aria-label="content" class="mt-0" id="section3">
+					<div class="bg-base-100 w-full overflow-hidden">
+						<div class="container-content px-5 py-20 pb-10 gap-14 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-stretch font-bold">
+							<div class="lg:w-1/3 w-full flex justify-between flex-col gap-10">
+								<div class="section-title flex flex-col w-full">
+									<div class="sm:text-5xl text-2xl w-full text-left">Section 3</div>
+									<div class="divider my-0 py-0 divider-primary w-32"></div>
+									<div class="sm:text-4xl text-xl w-full text-left font-medium">Lorem ipsum dolor sit amet.</div>
+								</div>
+								<div class="lg:inline rounded aspect-[3/4] hidden bg-[url(https://fakeimg.pl/450x800?font=bebas)] bg-center bg-cover"></div>
+							</div>
+							<div class="lg:w-1/3 grow h-full w-full flex flex-wrap gap-5">
+								<div class="card-3">
+									<div class="card-3-title">
+										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
+										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
+									</div>
+									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
+								</div>
+								<div class="card-3">
+									<div class="card-3-title">
+										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
+										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
+									</div>
+									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
+								</div>
+								<div class="card-3">
+									<div class="card-3-title">
+										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
+										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
+									</div>
+									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
+								</div>
+								<div class="card-3">
+									<div class="card-3-title">
+										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
+										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
+									</div>
+									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
+								</div>
+								<div class="card-3 max-md:hidden">
+									<div class="card-3-title">
+										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
+										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
+									</div>
+									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
+								</div>
+								<div class="card-3 max-md:hidden">
+									<div class="card-3-title">
+										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
+										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
+									</div>
+									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div aria-colindex="4" aria-label="content" class="mt-0" id="section4">
+					<div class="bg-base-200 w-full overflow-hidden">
+						<div class="container-content px-5 py-20 pb-10 gap-14 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-stretch font-bold">
+							<div class="w-full flex flex-wrap gap-5">
+								<div class="lg:w-1/3 grow flex flex-col gap-5">
+									<div class="section-title flex flex-col w-full">
+										<div class="sm:text-5xl text-2xl w-full text-left">Section 4</div>
+										<div class="divider my-0 py-0 divider-primary w-32"></div>
+									</div>
+									<div class="text-left font-normal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam officia tenetur quibusdam beatae nesciunt minima ea eum deleniti quis quae.</div>
+									<ul class="font-normal flex flex-col gap-2 *:flex *:items-start *:justify-start *:gap-2">
+										<li>
+											<span class="mt-1 text-success aspect-square icon-[icon-park-twotone--check-one]"></span>
+											<span class="text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. In quidem accusantium voluptatem distinctio laboriosam! Voluptatum qui aliquam quo dolore sit.</span>
+										</li>
+										<li>
+											<span class="mt-1 text-success aspect-square icon-[icon-park-twotone--check-one]"></span>
+											<span class="text-left">Lorem ipsum dolor sit amet.</span>
+										</li>
+										<li>
+											<span class="mt-1 text-success aspect-square icon-[icon-park-twotone--check-one]"></span>
+											<span class="text-left">Lorem ipsum dolor sit amet.</span>
+										</li>
+										<li>
+											<span class="mt-1 text-success aspect-square icon-[icon-park-twotone--check-one]"></span>
+											<span class="text-left">Lorem ipsum dolor sit amet.</span>
+										</li>
+									</ul>
+								</div>
+								<div class="lg:w-1/3 w-full shrink rounded h-full bg-[url(https://fakeimg.pl/450x800?font=bebas)] bg-center bg-cover shadow"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div aria-colindex="5" aria-label="content" class="mt-0" id="section5">
+					<div class="bg-base-100 w-full overflow-hidden">
+						<div class="container-content px-5 py-20 pb-10 gap-14 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-stretch font-bold">
+							<div class="section-title flex flex-col w-full">
+								<div class="sm:text-5xl text-2xl w-full text-left">Section 5</div>
+								<div class="divider my-0 py-0 divider-primary w-32"></div>
+							</div>
+							<div class="w-full flex lg:flex-row flex-col gap-10">
+								<form action="#" method="get" class="lg:w-1/3 grow flex flex-wrap items-start h-fit gap-5">
+									<input type="text" placeholder="Type here" class="rounded input input-bordered w-1/3 grow min-w-28" />
+									<input type="text" placeholder="Type here" class="rounded input input-bordered w-1/3 grow min-w-28" />
+									<input type="text" placeholder="Type here" class="rounded input input-bordered w-1/3 grow min-w-28" />
+									<textarea class="textarea textarea-bordered w-full rounded" rows="10" placeholder="Type here"></textarea>
+									<input type="submit" value="Submit" class="w-full rounded btn btn-primary text-base-100">
+								</form>
+								<div class="lg:w-1/12 shrink flex flex-col justify-center items-center gap-5">
+									<a href="#" class="btn btn-outline text-2xl btn-circle"><span class="icon-[mdi--youtube]"></span></a>
+									<a href="#" class="btn btn-outline text-2xl btn-circle"><span class="icon-[ri--instagram-fill]"></span></a>
+									<a href="#" class="btn btn-outline text-2xl btn-circle"><span class="icon-[mdi--linkedin]"></span></a>
+								</div>
+								<div class="card lg:w-1/3 grow rounded bg-base-100 shadow-xl">
+									<figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+									<div class="card-body">
+										<h2 class="card-title">Shoes!</h2>
+										<p>If a dog chews shoes whose shoes does he choose?</p>
+										<div class="card-actions justify-end">
+											<button class="btn btn-primary text-base-100">Buy Now</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				<footer class="footer transition-all bg-neutral-900 dark:bg-neutral-300 text-base-100">
 					<div class="container p-5 mx-auto flex sm:justify-between items-center justify-center max-sm:flex-col">
 						<div class="flex gap-1">
@@ -173,6 +305,7 @@
 		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 		<script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
+		<script src="./assets/marquee.js"></script>
 		<script src="./assets/script.js"></script>
 	</body>
 </html>
