feat: Finishing animation

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</div>
 							<div data-aos="fade-up" data-aos-anchor="#beranda" data-aos-delay="300" class="w-[calc(66.666%_-_40px)] z-10 absolute right-[-40px] bottom-0 grow aspect-[225/179] bg-[url(/assets/images/hero.svg)] dark:bg-[url(/assets/images/hero-dark.svg)] bg-no-repeat bg-top bg-contain max-lg:hidden"></div>
 						</div>
-						<div class="marquee-container p-10 container-content">
+						<div data-aos="fade-zoom-in" class="marquee-container p-10 container-content">
 							<div class="bg-[url(https://fakeimg.pl/600x400)] opacity-60 rounded aspect-video w-60 bg-center bg-cover"></div>
 						</div>
 					</div>
@@ -75,13 +75,13 @@
 					<div class="bg-base-200 w-full overflow-hidden">
 						<div class="container-content px-5 py-20 pb-10 gap-0 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-start font-bold">
 							<div class="section-title flex flex-col w-full">
-								<div class="sm:text-5xl text-2xl w-full text-left">Section 2</div>
-								<div class="divider my-0 py-0 divider-primary w-32"></div>
+								<div data-aos="fade-up" class="sm:text-5xl text-2xl w-full text-left">Section 2</div>
+								<div data-aos="fade-up" data-aos-delay="100" class="divider my-0 py-0 divider-primary w-32"></div>
 							</div>
 							<div class="max-sm:pt-5 flex md:flex-row flex-col w-full gap-x-10 gap-y-2 flex-wrap justify-center text-base font-normal">
-								<div class="md:w-1/4 grow text-left max-md:text-xl text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, blanditiis?</div>
-								<div class="w-1/4 max-md:hidden grow text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, blanditiis?</div>
-								<div class="md:w-1/4 grow flex justify-end items-start">
+								<div data-aos="fade-up" class="md:w-1/4 grow text-left max-md:text-xl text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, blanditiis?</div>
+								<div data-aos="fade-up" data-aos-delay="100" class="w-1/4 max-md:hidden grow text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, blanditiis?</div>
+								<div data-aos="fade-up" data-aos-delay="200" class="md:w-1/4 grow flex justify-end items-start">
 									<a href="#" target="_blank" class="btn btn-ghost flex">
 										<span>Lorem ipsum dolor sit. </span>
 										<span class="icon-[mdi--arrow-top-right] text-lg"></span>
@@ -90,7 +90,7 @@
 							</div>
 							<!-- Cards -->
 							<div class="flex w-full gap-5 flex-wrap justify-center text-base font-normal">
-								<div class="card-2 w-1/4">
+								<div data-aos="fade-up" data-aos-delay="0" class="card-2 w-1/4">
 									<div class="card-body">
 										<h2 class="card-title">Card title!</h2>
 										<p class="text-left">If a dog chews shoes whose shoes does he choose?</p>
@@ -99,7 +99,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="card-2 w-1/4">
+								<div data-aos="fade-up" data-aos-delay="100" class="card-2 w-1/4">
 									<div class="card-body">
 										<h2 class="card-title">Card title!</h2>
 										<p class="text-left">If a dog chews shoes whose shoes does he choose?</p>
@@ -108,7 +108,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="card-2 w-1/4">
+								<div data-aos="fade-up" data-aos-delay="200" class="card-2 w-1/4">
 									<div class="card-body">
 										<h2 class="card-title">Card title!</h2>
 										<p class="text-left">If a dog chews shoes whose shoes does he choose?</p>
@@ -117,7 +117,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="card-2 w-2/5">
+								<div data-aos="fade-up" data-aos-delay="0" class="card-2 w-2/5">
 									<div class="card-body">
 										<h2 class="card-title">Card title!</h2>
 										<p class="text-left">If a dog chews shoes whose shoes does he choose?</p>
@@ -126,7 +126,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="card-2 w-1/4">
+								<div data-aos="fade-up" data-aos-delay="100" class="card-2 w-1/4">
 									<div class="card-body">
 										<h2 class="card-title">Card title!</h2>
 										<p class="text-left">If a dog chews shoes whose shoes does he choose?</p>
@@ -135,7 +135,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="card-2 w-1/4">
+								<div data-aos="fade-up" data-aos-delay="200" class="card-2 w-1/4">
 									<div class="card-body">
 										<h2 class="card-title">Card title!</h2>
 										<p class="text-left">If a dog chews shoes whose shoes does he choose?</p>
@@ -153,49 +153,49 @@
 						<div class="container-content px-5 py-20 pb-10 gap-14 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-stretch font-bold">
 							<div class="lg:w-1/3 w-full flex justify-between flex-col gap-10">
 								<div class="section-title flex flex-col w-full">
-									<div class="sm:text-5xl text-2xl w-full text-left">Section 3</div>
-									<div class="divider my-0 py-0 divider-primary w-32"></div>
-									<div class="sm:text-4xl text-xl w-full text-left font-medium">Lorem ipsum dolor sit amet.</div>
+									<div data-aos="fade-up" class="sm:text-5xl text-2xl w-full text-left">Section 3</div>
+									<div data-aos="fade-up" data-aos-delay="100" class="divider my-0 py-0 divider-primary w-32"></div>
+									<div data-aos="fade-up" data-aos-delay="200" class="sm:text-3xl text-xl w-full text-left font-medium">Lorem ipsum dolor sit amet.</div>
 								</div>
-								<div class="lg:inline rounded aspect-[3/4] hidden bg-[url(https://fakeimg.pl/450x800?font=bebas)] bg-center bg-cover"></div>
+								<div data-aos="fade-up" data-aos-delay="300" class="lg:inline rounded aspect-[3/4] hidden bg-[url(https://fakeimg.pl/450x800?font=bebas)] bg-center bg-cover"></div>
 							</div>
 							<div class="lg:w-1/3 grow h-full w-full flex flex-wrap gap-5">
-								<div class="card-3">
+								<div data-aos="fade-up" data-aos-delay="0" class="card-3">
 									<div class="card-3-title">
 										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
 										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
 									</div>
 									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
 								</div>
-								<div class="card-3">
+								<div data-aos="fade-up" data-aos-delay="100" class="card-3">
 									<div class="card-3-title">
 										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
 										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
 									</div>
 									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
 								</div>
-								<div class="card-3">
+								<div data-aos="fade-up" data-aos-delay="0" class="card-3">
 									<div class="card-3-title">
 										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
 										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
 									</div>
 									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
 								</div>
-								<div class="card-3">
+								<div data-aos="fade-up" data-aos-delay="100" class="card-3">
 									<div class="card-3-title">
 										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
 										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
 									</div>
 									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
 								</div>
-								<div class="card-3 max-md:hidden">
+								<div data-aos="fade-up" data-aos-delay="0" class="card-3 max-md:hidden">
 									<div class="card-3-title">
 										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
 										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
 									</div>
 									<p class="text-left font-normal">If a dog chews shoes whose shoes does he choose? If a dog chews shoes whose shoes does he choose?</p>
 								</div>
-								<div class="card-3 max-md:hidden">
+								<div data-aos="fade-up" data-aos-delay="100" class="card-3 max-md:hidden">
 									<div class="card-3-title">
 										<div class="md:text-2xl text-xl text-left flex items-end font-semibold">Card title 2!</div>
 										<span class="icon-[icon-park-twotone--connect] lg:text-6xl text-4xl"></span>
@@ -208,34 +208,35 @@
 				</div>
 				<div aria-colindex="4" aria-label="content" class="mt-0" id="section4">
 					<div class="bg-base-200 w-full overflow-hidden">
-						<div class="container-content px-5 py-20 pb-10 gap-14 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-stretch font-bold">
+						<div class="container-content px-5 py-20 pb-10 gap-14 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row font-bold">
 							<div class="w-full flex flex-wrap gap-5">
 								<div class="lg:w-1/3 grow flex flex-col gap-5">
 									<div class="section-title flex flex-col w-full">
-										<div class="sm:text-5xl text-2xl w-full text-left">Section 4</div>
-										<div class="divider my-0 py-0 divider-primary w-32"></div>
+										<div data-aos="fade-up" class="sm:text-5xl text-2xl w-full text-left">Section 4</div>
+										<div data-aos="fade-up" data-aos-delay="100" class="divider my-0 py-0 divider-primary w-32"></div>
 									</div>
-									<div class="text-left font-normal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam officia tenetur quibusdam beatae nesciunt minima ea eum deleniti quis quae.</div>
-									<ul class="font-normal flex flex-col gap-2 *:flex *:items-start *:justify-start *:gap-2">
-										<li>
+									<div data-aos="fade-up" class="text-left font-normal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam officia tenetur quibusdam beatae nesciunt minima ea eum deleniti quis quae.</div>
+									<ul data-aos="fade-up" data-aos-delay="100" class="font-normal flex flex-col gap-2 *:flex *:items-start *:justify-start *:gap-2">
+										<li data-aos="fade-up" data-aos-delay="100">
 											<span class="mt-1 text-success aspect-square icon-[icon-park-twotone--check-one]"></span>
 											<span class="text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. In quidem accusantium voluptatem distinctio laboriosam! Voluptatum qui aliquam quo dolore sit.</span>
 										</li>
-										<li>
+										<li data-aos="fade-up" data-aos-delay="150">
 											<span class="mt-1 text-success aspect-square icon-[icon-park-twotone--check-one]"></span>
 											<span class="text-left">Lorem ipsum dolor sit amet.</span>
 										</li>
-										<li>
+										<li data-aos="fade-up" data-aos-delay="200">
 											<span class="mt-1 text-success aspect-square icon-[icon-park-twotone--check-one]"></span>
 											<span class="text-left">Lorem ipsum dolor sit amet.</span>
 										</li>
-										<li>
+										<li data-aos="fade-up" data-aos-delay="150">
 											<span class="mt-1 text-success aspect-square icon-[icon-park-twotone--check-one]"></span>
 											<span class="text-left">Lorem ipsum dolor sit amet.</span>
 										</li>
 									</ul>
 								</div>
-								<div class="lg:w-1/3 w-full shrink rounded h-full bg-[url(https://fakeimg.pl/450x800?font=bebas)] bg-center bg-cover shadow"></div>
+								<div data-aos="fade-up" data-aos-delay="100" class="lg:w-1/3 w-full shrink max-lg:aspect-video rounded bg-[url(https://fakeimg.pl/450x800?font=bebas)] bg-center bg-cover shadow"></div>
+								<div data-aos="fade-up" data-aos-delay="100" class="pt-10 w-full text-left font-normal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas alias distinctio vero iusto, saepe voluptatem ipsam amet nemo veniam? Cum odio fuga, adipisci eveniet porro placeat officiis, vitae aliquam quae sapiente error, iste dignissimos quidem reiciendis! Voluptas velit necessitatibus quidem?</div>
 							</div>
 						</div>
 					</div>
@@ -244,29 +245,29 @@
 					<div class="bg-base-100 w-full overflow-hidden">
 						<div class="container-content px-5 py-20 pb-10 gap-14 sm:gap-y-10 mt-0 flex lg:px-10 flex-wrap lg:flex-row items-stretch font-bold">
 							<div class="section-title flex flex-col w-full">
-								<div class="sm:text-5xl text-2xl w-full text-left">Section 5</div>
-								<div class="divider my-0 py-0 divider-primary w-32"></div>
+								<div data-aos="fade-up" class="sm:text-5xl text-2xl w-full text-left">Section 5</div>
+								<div data-aos="fade-up" data-aos-delay="100" class="divider my-0 py-0 divider-primary w-32"></div>
 							</div>
 							<div class="w-full flex lg:flex-row flex-col gap-10">
-								<form action="#" method="get" class="lg:w-1/3 grow flex flex-wrap items-start h-fit gap-5">
-									<input type="text" placeholder="Type here" class="rounded input input-bordered w-1/3 grow min-w-28" />
-									<input type="text" placeholder="Type here" class="rounded input input-bordered w-1/3 grow min-w-28" />
-									<input type="text" placeholder="Type here" class="rounded input input-bordered w-1/3 grow min-w-28" />
-									<textarea class="textarea textarea-bordered w-full rounded" rows="10" placeholder="Type here"></textarea>
-									<input type="submit" value="Submit" class="w-full rounded btn btn-primary text-base-100">
+								<form data-aos="fade-up" action="#" method="get" class="lg:w-1/3 grow p-5 rounded shadow-xl card grid grid-flow-row grid-cols-2 gap-5">
+									<input type="text" placeholder="Type here" class="rounded lg:h-auto input input-bordered col-span-2 row-auto grow min-w-28" />
+									<input type="text" placeholder="Type here" class="rounded lg:h-auto input input-bordered col-span-2 row-auto grow min-w-28" />
+									<input type="text" placeholder="Type here" class="rounded lg:h-auto input input-bordered col-span-2 row-auto grow min-w-28" />
+									<textarea class="textarea resize-none textarea-bordered w-full rounded row-span-6 col-span-2" placeholder="Type here"></textarea>
+									<input type="submit" value="Submit" class="w-full rounded btn btn-primary text-base-100 row-auto col-span-2" />
 								</form>
-								<div class="lg:w-1/12 shrink flex flex-col justify-center items-center gap-5">
+								<div data-aos="fade-up" data-aos-delay="400" class="lg:w-1/12 shrink flex lg:flex-col justify-center items-center gap-5">
 									<a href="#" class="btn btn-outline text-2xl btn-circle"><span class="icon-[mdi--youtube]"></span></a>
 									<a href="#" class="btn btn-outline text-2xl btn-circle"><span class="icon-[ri--instagram-fill]"></span></a>
 									<a href="#" class="btn btn-outline text-2xl btn-circle"><span class="icon-[mdi--linkedin]"></span></a>
 								</div>
-								<div class="card lg:w-1/3 grow rounded bg-base-100 shadow-xl">
+								<div data-aos="fade-up" data-aos-delay="100" class="card lg:w-1/3 grow rounded bg-base-100 shadow-xl">
 									<figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
 									<div class="card-body">
-										<h2 class="card-title">Shoes!</h2>
-										<p>If a dog chews shoes whose shoes does he choose?</p>
-										<div class="card-actions justify-end">
-											<button class="btn btn-primary text-base-100">Buy Now</button>
+										<div class="card-title">Shoes!</div>
+										<div class="text-left font-normal">If a dog chews shoes whose shoes does he choose?</div>
+										<div class="card-actions justify-end pt-3">
+											<button class="btn btn-primary text-base-100 rounded w-full">Buy Now</button>
 										</div>
 									</div>
 								</div>
@@ -277,16 +278,16 @@
 				<footer class="footer transition-all bg-neutral-900 dark:bg-neutral-300 text-base-100">
 					<div class="container p-5 mx-auto flex sm:justify-between items-center justify-center max-sm:flex-col">
 						<div class="flex gap-1">
-							<a aria-label="Facebook" href="#home" class="btn btn-ghost btn-circle"
-								><span><span class="text-xl icon-[mdi--facebook]"></span></span
+							<a aria-label="Youtube" target="_blank" href="https://www.youtube.com/@syukronekoprasetyo6921" class="btn btn-ghost btn-circle"
+								><span><span class="text-xl icon-[mdi--youtube]"></span></span
 							></a>
-							<a aria-label="Twitter" href="#home" class="btn btn-ghost btn-circle"
+							<a aria-label="Twitter" target="_blank" href="https://twitter.com/ekoe66" class="btn btn-ghost btn-circle"
 								><span><span class="text-xl icon-[mdi--twitter]"></span></span
 							></a>
-							<a aria-label="Instagram" href="#home" class="btn btn-ghost btn-circle"
-								><span><span class="text-xl icon-[mdi--instagram]"></span></span
+							<a aria-label="Instagram" target="_blank" href="https://www.instagram.com/syukron_eko_p" class="btn btn-ghost btn-circle"
+								><span><span class="text-xl icon-[ri--instagram-fill]"></span></span
 							></a>
-							<a aria-label="Linkedin" href="#home" class="btn btn-ghost btn-circle"
+							<a aria-label="Linkedin" target="_blank" href="https://www.linkedin.com/in/syukron-eko-prasetyo-bb3b3412b/" class="btn btn-ghost btn-circle"
 								><span><span class="text-xl icon-[mdi--linkedin]"></span></span
 							></a>
 						</div>
